--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 *keys
-storage
+./storage/*
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
